Starting to implement About provider & Become provider flows

--- a/IPSX/Flows/EnrolStaking/Storyboard/Base.lproj/EnrolStaking.storyboard
+++ b/IPSX/Flows/EnrolStaking/Storyboard/Base.lproj/EnrolStaking.storyboard
@@ -66,7 +66,7 @@
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hHE-Rg-YPM">
                                 <rect key="frame" x="34" y="296" width="307" height="95.5"/>
-                                <string key="text">Enrolling in the IPSX Staking Program will grant a 7% reward of the amount of staked IPSX tokens, provided that all conditions are meet for the entire duration of the program (3 months). </string>
+                                <string key="text">Enrolling in the IPSX Staking Program will grant a 7% reward of the amount of staked IPSX tokens, provided that all conditions are met for the entire duration of the program (3 months). </string>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <color key="textColor" red="0.43921568630000002" green="0.43921568630000002" blue="0.43921568630000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
