--- a/IPSX/Storyboard/Base.lproj/Main.storyboard
+++ b/IPSX/Storyboard/Base.lproj/Main.storyboard
@@ -237,7 +237,7 @@
                 <viewControllerPlaceholder storyboardName="TokenRequest" id="ZZ3-69-9NQ" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="goG-Au-rdK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1797" y="1288"/>
+            <point key="canvasLocation" x="-1880" y="1288"/>
         </scene>
         <!--TokenDeposit-->
         <scene sceneID="9Yi-LI-qqe">
@@ -253,7 +253,23 @@
                 <viewControllerPlaceholder storyboardName="NewProxy" referencedIdentifier="ProxyDetailsControllerID" id="qSC-O9-erJ" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mf9-hA-eQf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1256" y="1288"/>
+            <point key="canvasLocation" x="-1208" y="1288"/>
+        </scene>
+        <!--AboutPoviderControllerID-->
+        <scene sceneID="1XK-kH-iBZ">
+            <objects>
+                <viewControllerPlaceholder storyboardName="ProviderDetails" referencedIdentifier="AboutPoviderControllerID" id="MOu-mb-sig" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aYV-xw-FmI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1339" y="1400"/>
+        </scene>
+        <!--ReadyToBecomeProviderControllerID-->
+        <scene sceneID="3b0-Mg-J7k">
+            <objects>
+                <viewControllerPlaceholder storyboardName="ProviderDetails" referencedIdentifier="ReadyToBecomeProviderControllerID" id="yFQ-B8-4bt" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wh1-fi-pMY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1786" y="1399"/>
         </scene>
         <!--Dashboard-->
         <scene sceneID="hoR-RX-E2W">
@@ -374,6 +390,10 @@
                                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VZJ-6d-cxO">
                                                 <rect key="frame" x="0.0" y="0.0" width="345" height="66"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                <connections>
+                                                    <action selector="ProviderButtonAction:" destination="hWe-dS-7HY" eventType="touchUpInside" id="Rhi-Kl-SEX"/>
+                                                    <action selector="ProviderButtonAction:" destination="t3o-MO-ZV0" eventType="touchUpInside" id="XR9-nY-iDO"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -691,9 +711,12 @@
                         <segue destination="ZZ3-69-9NQ" kind="show" identifier="showTokenRequestSegueID" id="449-lp-Zve"/>
                         <segue destination="adJ-7o-RXS" kind="presentation" identifier="FreeProxySegueID" id="eg6-mz-aaC"/>
                         <segue destination="zUu-Hn-Ofc" kind="show" identifier="tokenDepositSegueID" id="jJo-g5-NxO"/>
+                        <segue destination="yFQ-B8-4bt" kind="presentation" identifier="showBecomeProviderSegue" id="AJn-sY-Gie"/>
+                        <segue destination="MOu-mb-sig" kind="presentation" identifier="showAboutProviderSegue" id="AgW-mi-fFJ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Sqh-Z5-fpU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="hWe-dS-7HY" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="-1546.4000000000001" y="815.76354679802955"/>
         </scene>
