--- a/IPSX/Flows/Dashboard/Storyboard/ProviderDetails.storyboard
+++ b/IPSX/Flows/Dashboard/Storyboard/ProviderDetails.storyboard
@@ -182,6 +182,70 @@
                                     <constraint firstAttribute="height" constant="94" id="uhb-1o-eDk"/>
                                 </constraints>
                             </view>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="abu-co-5Z6">
+                                <rect key="frame" x="0.0" y="65" width="375" height="350"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="350" id="8Ek-nJ-db5"/>
+                                </constraints>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="98i-8H-GwF">
+                                    <size key="itemSize" width="375" height="350"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="AboutProviderCellID" id="IxC-Cs-bW7" customClass="AboutProviderCell" customModule="IPSX" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="350"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="350"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Job as Provider" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZGd-rY-4eP">
+                                                    <rect key="frame" x="100.5" y="207.5" width="174" height="22"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ydC-SW-3Kz">
+                                                    <rect key="frame" x="15" y="239.5" width="345" height="95.5"/>
+                                                    <string key="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque in consectetur nunc. Aenean eu convallis eros, a semper felis. Duis eget eros vel tortor lobortis convallis at sed ante. Aliquam eget risus nibh. </string>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" red="0.53333333333333333" green="0.53333333333333333" blue="0.53333333333333333" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="trade" translatesAutoresizingMaskIntoConstraints="NO" id="Os0-ZA-9mC">
+                                                    <rect key="frame" x="152" y="122.5" width="70" height="70"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="70" id="02v-mw-EjV"/>
+                                                        <constraint firstAttribute="width" constant="70" id="Jvk-PP-rj9"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                        </view>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="Os0-ZA-9mC" firstAttribute="centerX" secondItem="IxC-Cs-bW7" secondAttribute="centerX" id="76M-D1-Zfm"/>
+                                            <constraint firstItem="ydC-SW-3Kz" firstAttribute="top" secondItem="ZGd-rY-4eP" secondAttribute="bottom" constant="10" id="SYk-qv-0Wj"/>
+                                            <constraint firstItem="ydC-SW-3Kz" firstAttribute="leading" secondItem="IxC-Cs-bW7" secondAttribute="leading" constant="15" id="WT5-bD-Xfg"/>
+                                            <constraint firstAttribute="trailing" secondItem="ydC-SW-3Kz" secondAttribute="trailing" constant="15" id="dqz-2D-Q6i"/>
+                                            <constraint firstItem="ZGd-rY-4eP" firstAttribute="top" secondItem="Os0-ZA-9mC" secondAttribute="bottom" constant="15" id="mwT-iF-80X"/>
+                                            <constraint firstAttribute="bottom" secondItem="ydC-SW-3Kz" secondAttribute="bottom" constant="15" id="ozT-qR-5RB"/>
+                                            <constraint firstItem="ZGd-rY-4eP" firstAttribute="centerX" secondItem="IxC-Cs-bW7" secondAttribute="centerX" id="tRV-G8-85M"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="imageView" destination="Os0-ZA-9mC" id="rac-yo-6BS"/>
+                                            <outlet property="subtitleLabel" destination="ydC-SW-3Kz" id="LHe-we-t8O"/>
+                                            <outlet property="titleLabel" destination="ZGd-rY-4eP" id="wkO-Ge-EwL"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="i7q-uf-xtD" id="eND-Gd-FQb"/>
+                                    <outlet property="delegate" destination="i7q-uf-xtD" id="dBh-ze-jZK"/>
+                                </connections>
+                            </collectionView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mIJ-Ui-OYy" customClass="RoundedButton" customModule="IPSX" customModuleProvider="target">
                                 <rect key="frame" x="15" y="608" width="345" height="44"/>
                                 <constraints>
@@ -203,26 +267,40 @@
                                     <action selector="openInBrowserAction:" destination="i7q-uf-xtD" eventType="touchUpInside" id="w0z-l7-v6o"/>
                                 </connections>
                             </button>
+                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="Piu-Rh-aJG">
+                                <rect key="frame" x="168" y="430" width="39" height="37"/>
+                                <color key="pageIndicatorTintColor" red="0.80784313730000001" green="0.83137254900000002" blue="0.85490196080000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="currentPageIndicatorTintColor" red="0.1647058824" green="0.67450980390000004" blue="0.87843137250000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </pageControl>
                         </subviews>
                         <color key="backgroundColor" red="0.97254901959999995" green="0.97254901959999995" blue="0.97254901959999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="Piu-Rh-aJG" firstAttribute="centerX" secondItem="JVB-pg-Qy9" secondAttribute="centerX" id="17D-ln-MWm"/>
                             <constraint firstItem="mIJ-Ui-OYy" firstAttribute="leading" secondItem="JVB-pg-Qy9" secondAttribute="leading" constant="15" id="2kt-E9-tPI"/>
                             <constraint firstItem="h6h-e6-KmO" firstAttribute="top" secondItem="eup-g2-fZg" secondAttribute="bottom" id="4xl-KM-yw2"/>
                             <constraint firstItem="EiG-iL-PeZ" firstAttribute="bottom" secondItem="mIJ-Ui-OYy" secondAttribute="bottom" constant="15" id="DOe-DI-qGL"/>
                             <constraint firstItem="EiG-iL-PeZ" firstAttribute="trailing" secondItem="eup-g2-fZg" secondAttribute="trailing" id="Ihp-Ub-j3z"/>
+                            <constraint firstItem="abu-co-5Z6" firstAttribute="leading" secondItem="EiG-iL-PeZ" secondAttribute="leading" id="TDi-VS-hfp"/>
+                            <constraint firstItem="Piu-Rh-aJG" firstAttribute="top" secondItem="abu-co-5Z6" secondAttribute="bottom" constant="15" id="XVl-Ig-gpL"/>
                             <constraint firstItem="EiG-iL-PeZ" firstAttribute="top" secondItem="eup-g2-fZg" secondAttribute="top" constant="50" id="YHs-1L-Nzj"/>
                             <constraint firstItem="h6h-e6-KmO" firstAttribute="leading" secondItem="EiG-iL-PeZ" secondAttribute="leading" id="fle-aN-biZ"/>
                             <constraint firstItem="eup-g2-fZg" firstAttribute="leading" secondItem="EiG-iL-PeZ" secondAttribute="leading" id="oox-0m-rs5"/>
+                            <constraint firstItem="EiG-iL-PeZ" firstAttribute="trailing" secondItem="abu-co-5Z6" secondAttribute="trailing" id="qs9-7b-Xmj"/>
+                            <constraint firstItem="abu-co-5Z6" firstAttribute="top" secondItem="h6h-e6-KmO" secondAttribute="bottom" id="sK0-k6-3iz"/>
                             <constraint firstItem="EiG-iL-PeZ" firstAttribute="trailing" secondItem="mIJ-Ui-OYy" secondAttribute="trailing" constant="15" id="uCQ-1D-jXp"/>
                             <constraint firstItem="EiG-iL-PeZ" firstAttribute="trailing" secondItem="h6h-e6-KmO" secondAttribute="trailing" id="ywK-IY-y30"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="EiG-iL-PeZ"/>
                     </view>
                     <navigationItem key="navigationItem" id="IWu-1Z-kEe"/>
+                    <connections>
+                        <outlet property="collectionView" destination="abu-co-5Z6" id="i5F-62-s5P"/>
+                        <outlet property="pageControl" destination="Piu-Rh-aJG" id="6Oc-zI-1Ct"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Sbs-aR-UcW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4140" y="1586"/>
+            <point key="canvasLocation" x="4140" y="1585.4572713643179"/>
         </scene>
     </scenes>
     <resources>
