--- a/IPSX/Flows/Profile/Storyboard/Base.lproj/Profile.storyboard
+++ b/IPSX/Flows/Profile/Storyboard/Base.lproj/Profile.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="CRq-Bd-lUK">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="CRq-Bd-lUK">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -65,14 +65,14 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Az-2p-pmY" userLabel="Separator">
-                                <rect key="frame" x="0.0" y="64" width="375" height="1"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="0.5"/>
                                 <color key="backgroundColor" red="0.67450980390000004" green="0.67450980390000004" blue="0.67450980390000004" alpha="0.30163402288732394" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="0.5" id="fs7-c3-bW6"/>
                                 </constraints>
                             </view>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QEI-Kl-5RX">
-                                <rect key="frame" x="0.0" y="64" width="375" height="756"/>
+                                <rect key="frame" x="0.0" y="63.5" width="375" height="756.5"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qno-EN-Cxf" userLabel="Content View">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="756"/>
@@ -328,12 +328,12 @@
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                                 <subviews>
                                                     <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="corporatePending" translatesAutoresizingMaskIntoConstraints="NO" id="gjE-Za-mhh">
-                                                        <rect key="frame" x="19" y="16" width="33" height="37"/>
+                                                        <rect key="frame" x="19" y="15" width="33" height="37"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                                         <color key="tintColor" red="0.1650000066" green="0.67450980390000004" blue="0.87800002099999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     </imageView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Corporate Details" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hem-az-Ylq">
-                                                        <rect key="frame" x="69" y="13" width="269" height="20"/>
+                                                        <rect key="frame" x="69" y="12" width="269" height="20"/>
                                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
                                                         <color key="textColor" red="0.1647058824" green="0.1647058824" blue="0.1647058824" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -419,7 +419,7 @@
                                 </constraints>
                             </scrollView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9Fn-ZY-t5U" customClass="CustomLoadingView" customModule="IPSX" customModuleProvider="target">
-                                <rect key="frame" x="166" y="398" width="44" height="44"/>
+                                <rect key="frame" x="165.5" y="398" width="44" height="44"/>
                                 <color key="backgroundColor" red="0.81176470590000005" green="0.054901960780000002" blue="0.054901960780000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="44" id="ULl-EG-w3o"/>
@@ -459,6 +459,8 @@
                         <outlet property="keyIconImageView" destination="XmE-yz-7Zq" id="rDJ-57-ssX"/>
                         <outlet property="lastNameTextField" destination="du9-hi-1ds" id="uhb-99-gER"/>
                         <outlet property="legalCheckmarkImage" destination="NrN-ug-Mjh" id="GmF-2r-9di"/>
+                        <outlet property="legalOptionsHoldeView" destination="uAv-NN-G9i" id="kyL-JJ-Ibe"/>
+                        <outlet property="legalotionsTitleLabel" destination="CQf-aP-NBP" id="8O1-7M-2ye"/>
                         <outlet property="loadingView" destination="9Fn-ZY-t5U" id="fjd-ia-Bko"/>
                         <outlet property="saveButton" destination="ghf-fy-wpx" id="yd7-Vb-dLE"/>
                         <outlet property="selectedCountryLabel" destination="qWj-Pj-swk" id="c6r-sI-8AX"/>
@@ -555,7 +557,7 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Change Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i4J-v9-TbB">
-                                        <rect key="frame" x="115" y="62" width="144" height="21"/>
+                                        <rect key="frame" x="115.5" y="62" width="144" height="21"/>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -746,11 +748,11 @@
         </scene>
     </scenes>
     <resources>
-        <image name="BackArrow" width="10" height="19"/>
-        <image name="CheckLarge" width="56" height="41"/>
+        <image name="BackArrow" width="10.5" height="19"/>
+        <image name="CheckLarge" width="56.5" height="41.5"/>
         <image name="CloseBut" width="27" height="27"/>
         <image name="RightDisclosure" width="9" height="16"/>
-        <image name="corporatePending" width="33" height="36"/>
-        <image name="keyIcon" width="25" height="26"/>
+        <image name="corporatePending" width="33" height="36.5"/>
+        <image name="keyIcon" width="25.5" height="26"/>
     </resources>
 </document>
