--- a/IPSX/Flows/Wallets/Storyboard/Base.lproj/WalletAdd.storyboard
+++ b/IPSX/Flows/Wallets/Storyboard/Base.lproj/WalletAdd.storyboard
@@ -579,13 +579,13 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="La0-Dw-ufx">
-                                <rect key="frame" x="107" y="245" width="84" height="44"/>
+                                <rect key="frame" x="107" y="245" width="116" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="bl6-pq-ioI"/>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="84" id="jMB-z9-hFa"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <state key="normal" title="   QR Code" image="QrCodeSmall">
+                                <state key="normal" title="   Scan QR Code" image="QrCodeSmall">
                                     <color key="titleColor" red="0.16862745100000001" green="0.51372549020000002" blue="0.65499997139999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
@@ -723,7 +723,21 @@
                                 <color key="textColor" red="0.1647058824" green="0.1647058824" blue="0.1650000066" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="58" sectionHeaderHeight="24" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="V30-Dc-18s">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qby-RM-c0l" userLabel="Separator">
+                                <rect key="frame" x="0.0" y="124.5" width="375" height="0.5"/>
+                                <color key="backgroundColor" red="0.67450980390000004" green="0.67450980390000004" blue="0.67450980390000004" alpha="0.29915823060000002" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="0.5" id="wjx-Kg-qCb"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Press Add to link your first wallet to this account" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R8g-uf-5VR">
+                                <rect key="frame" x="16" y="130" width="343" height="32"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" red="0.43921568630000002" green="0.43921568630000002" blue="0.43921568630000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="58" sectionHeaderHeight="24" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="V30-Dc-18s">
                                 <rect key="frame" x="0.0" y="125" width="375" height="542"/>
                                 <color key="backgroundColor" red="0.97254901959999995" green="0.97254901959999995" blue="0.97254901959999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
@@ -801,11 +815,13 @@
                         <color key="backgroundColor" red="0.97254901959999995" green="0.97254901959999995" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="Z9Q-Q6-0gT" firstAttribute="centerY" secondItem="7B7-C1-WKZ" secondAttribute="centerY" id="50v-Ra-BGB"/>
+                            <constraint firstItem="7B7-C1-WKZ" firstAttribute="trailing" secondItem="Qby-RM-c0l" secondAttribute="trailing" id="9zJ-aB-o0a"/>
                             <constraint firstItem="Xmv-mB-8NE" firstAttribute="top" secondItem="etY-zZ-efQ" secondAttribute="bottom" constant="25.5" id="C0L-K8-eb4"/>
                             <constraint firstItem="Xmv-mB-8NE" firstAttribute="leading" secondItem="7B7-C1-WKZ" secondAttribute="leading" constant="15" id="Hig-8L-VdK"/>
                             <constraint firstItem="etY-zZ-efQ" firstAttribute="leading" secondItem="OvQ-H4-m3v" secondAttribute="leading" id="Leu-jT-lrn"/>
                             <constraint firstItem="7B7-C1-WKZ" firstAttribute="bottom" secondItem="V30-Dc-18s" secondAttribute="bottom" id="O8q-eL-Mox"/>
                             <constraint firstItem="Z9Q-Q6-0gT" firstAttribute="centerX" secondItem="7B7-C1-WKZ" secondAttribute="centerX" id="Tr5-hi-QeG"/>
+                            <constraint firstItem="V30-Dc-18s" firstAttribute="top" secondItem="Qby-RM-c0l" secondAttribute="bottom" id="d7j-GR-6OF"/>
                             <constraint firstItem="OvQ-H4-m3v" firstAttribute="leading" secondItem="7B7-C1-WKZ" secondAttribute="leading" id="dO2-qg-TiL"/>
                             <constraint firstItem="7B7-C1-WKZ" firstAttribute="top" secondItem="OvQ-H4-m3v" secondAttribute="top" constant="50" id="eFa-2d-97K"/>
                             <constraint firstItem="etY-zZ-efQ" firstAttribute="trailing" secondItem="OvQ-H4-m3v" secondAttribute="trailing" id="foN-oW-U6c"/>
@@ -814,6 +830,7 @@
                             <constraint firstItem="V30-Dc-18s" firstAttribute="leading" secondItem="7B7-C1-WKZ" secondAttribute="leading" id="kWj-o1-5GL"/>
                             <constraint firstItem="7B7-C1-WKZ" firstAttribute="trailing" secondItem="V30-Dc-18s" secondAttribute="trailing" id="lH6-7q-ICg"/>
                             <constraint firstItem="etY-zZ-efQ" firstAttribute="top" secondItem="OvQ-H4-m3v" secondAttribute="bottom" id="qHa-sf-4v9"/>
+                            <constraint firstItem="Qby-RM-c0l" firstAttribute="leading" secondItem="7B7-C1-WKZ" secondAttribute="leading" id="vis-xO-fCf"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="7B7-C1-WKZ"/>
                     </view>
@@ -822,6 +839,7 @@
                     <connections>
                         <outlet property="loadingView" destination="Z9Q-Q6-0gT" id="eVk-nJ-JX0"/>
                         <outlet property="separatorView" destination="etY-zZ-efQ" id="jq5-We-8TI"/>
+                        <outlet property="tableTopSeparator" destination="Qby-RM-c0l" id="puc-A6-TkJ"/>
                         <outlet property="tableView" destination="V30-Dc-18s" id="Edg-rC-jtY"/>
                         <outlet property="topBarView" destination="OvQ-H4-m3v" id="qVN-b6-v0L"/>
                         <outlet property="topConstraintOutlet" destination="qHa-sf-4v9" id="gh4-e9-1Rj"/>
@@ -1100,6 +1118,6 @@
         <image name="walletLarge" width="51" height="51.5"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="VIp-L5-DOc"/>
+        <segue reference="kox-f1-XBp"/>
     </inferredMetricsTieBreakers>
 </document>
